--- a/java/pom.xml
+++ b/java/pom.xml
@@ -42,5 +42,11 @@
             <artifactId>kafka-streams</artifactId>
             <version>0.10.0.0-cp1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.10</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
